[package]
name = "mandelbrot-orbits-rust"
version = "0.1.0"
authors = ["Jose Celano <josecelano@gmail.com>"]
edition = "2021"
description = "A console command to generate an image of the Mandelbrot Set where each pixel color represents the period of the complex point (if the point belongs to the Set)."
license-file = "LICENSE-MIT"

[dependencies]
num = "0.4"
image = "0.24.3"
text-colorizer = "1.0.0"
